Temporarily remove some imports causing blank screen issue on iOS

--- a/packages/web/styles/Home.module.scss
+++ b/packages/web/styles/Home.module.scss
@@ -18,7 +18,8 @@
 
 .mainHeading {
   margin-bottom: 20px;
-  font-family: 'Greycliff CF';
+  font-family: 'Greycliff CF', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bolder;
   font-size: 3rem;
   text-align: center;
@@ -47,14 +48,16 @@
 
 .sectionTitle {
   margin-bottom: 10px;
-  font-family: 'Greycliff CF';
+  font-family: 'Greycliff CF', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bolder;
   font-size: 2rem;
   color: #000D20;
 }
 
 .subheadingDescription {
-  font-family: 'Greycliff CF';
+  font-family: 'Greycliff CF', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
   color: #000D20;
